removing template posts and adding a dummy post. more footer customization.
Signed-off-by: Dima Stopel <dima@twistlock.com>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="center">
   <div class="measure">
     <small>
-		This is Dima Stopel's personal website. Created using <a href="http://pixyll.com/">Pixyll</a>
+		This is Dima Stopel's personal website. Created using <a href="http://pixyll.com/">Pixyll</a>.
     </small>
   </div>
 </footer>
