initial commit for the circle post
Signed-off-by: Dima Stopel <dima@stopel.org>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,6 @@
+{% if page.math != false %}
+  {% include mathjax.html %}
+{% endif %}
 <header class="site-header px2 px-responsive">
   <div class="mt2 wrap">
     <div class="measure">
